reuse_existing_review_data_fn parameter to control copying behavior for updating df

--- a/Dev Reviewer.ipynb
+++ b/Dev Reviewer.ipynb
@@ -325,10 +325,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "b18f0342",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer.pkl...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/jupyter_reviewer/ReviewData.py:106: UserWarning: Input data dataframe shares columns with existing data, but are not equal.\n",
+      "Only adding columns [] to the ReviewData.data dataframe\n",
+      "Remaining columns are not going to be updated.If you intend to change the ReviewData.data attribute, make a new review data object and pass in this object's path to reuse_existing_review_data_fn:\n",
+      "\n",
+      "new_rd = ReviewData(review_data_fn=new_fn, df=updated_df, reuse_existing_review_data_fn=/Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer.pkl)\n",
+      "  \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -435,7 +454,7 @@
        "022613_PU_3426            NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +476,93 @@
     "test_rd.add_annotation('extra_description', 'text')\n",
     "test_rd.add_annotation('another_annot', 'number')\n",
     "test_rd.annot.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "970df1a6-8847-4306-b2cc-7c0fbab20a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy.pkl...\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy_test_rd_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy.pkl'\n",
+    "copy_test_rd = ReviewData(review_data_fn=copy_test_rd_fn,\n",
+    "                          df = cchu_purities_df, \n",
+    "                          reuse_existing_review_data_fn=test_rd_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "54ee7bc6-4f2c-43e0-847a-d4b733cba9cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy2.pkl...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/jupyter_reviewer/ReviewData.py:106: UserWarning: Input data dataframe shares columns with existing data, but are not equal.\n",
+      "Only adding columns [] to the ReviewData.data dataframe\n",
+      "Remaining columns are not going to be updated.If you intend to change the ReviewData.data attribute, make a new review data object and pass in this object's path to reuse_existing_review_data_fn:\n",
+      "\n",
+      "new_rd = ReviewData(review_data_fn=new_fn, df=updated_df, reuse_existing_review_data_fn=/Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy2.pkl)\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "copy2_test_rd_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy2.pkl'\n",
+    "copy2_cchu_purities_df = cchu_purities_df\n",
+    "copy2_cchu_purities_df['BETA_FLAG_not_enough_drivers'] = False\n",
+    "copy2_test_rd = ReviewData(review_data_fn=copy2_test_rd_fn,\n",
+    "                          df = copy2_cchu_purities_df.iloc[:2], \n",
+    "                          reuse_existing_review_data_fn=test_rd_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3b6d5c68-6480-4bd5-9c5a-d3737c97056c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying from existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer.pkl ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/jupyter_reviewer/ReviewData.py:81: UserWarning: df input is smaller than the original review session df input. New review session will only contain the previous data corresponding to newest df input\n",
+      "  # Add additional columns to table\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy3_test_rd_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer_copy3.pkl'\n",
+    "copy3_cchu_purities_df = cchu_purities_df\n",
+    "copy3_cchu_purities_df['BETA_FLAG_not_enough_drivers'] = True\n",
+    "copy3_test_rd = ReviewData(review_data_fn=copy3_test_rd_fn,\n",
+    "                          df = copy2_cchu_purities_df.iloc[:2], \n",
+    "                          reuse_existing_review_data_fn=test_rd_fn)"
    ]
   },
   {
