try src restructure for setup

--- a/Dev Reviewer.ipynb
+++ b/Dev Reviewer.ipynb
@@ -1090,8 +1090,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "cc895d85-8d7b-4d2d-a953-7bce473c6073",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Reviewers', 'JupyterReviewer', 'JupyterReviewer.lib']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import setuptools\n",
+    "setuptools.find_packages(where=\"src\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d920ea2-e47a-41be-8378-744cecf2d0a4",
    "metadata": {},
    "outputs": [],
    "source": []
