update tutorial notebooks

--- a/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "**1. ReviewData Object** A ReviewData object consists of 3 pandas dataframes:\n",
     "1. data: a dataframe with data that a user wants to review, row by row (ie samples, participants, mutations, etc.)\n",
-    "2. annot: annotations that a user wants to write for each row (ie notes, flags, etc.)\n",
+    "2. annot: a dataframe with annotations that a user wants to write for each row (ie notes, flags, etc.)\n",
     "3. history: a timeline of changes a user makes to the annot table\n",
     "\n",
     "**2. ReviewDataApp** A ReviewDataApp is a plotly.dash application to display data in a particular way to review data in a ReviewData object, and already includes prebuilt functionality for a user to add annotations and view history of the ReviewData.\n",
@@ -56,11 +56,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc1b9454-0801-4905-975e-8eaf89548b8e",
+   "cell_type": "raw",
+   "id": "8a6933ba-4d48-49b0-8be5-239cf91c8fe7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import YourReviewer\n",
     "\n",
@@ -94,12 +92,11 @@
    "source": [
     "To build your custom reviewer, you will need to do the following:\n",
     "\n",
-    "1. Create a new class that inherits `ReviewerTemplate`\n",
+    "1. Create a new class that inherits `ReviewerTemplate` in the `JupyterReviewer/Reviewers/` directory\n",
     "1. Define 3 abstract methods:\n",
     "    1. gen_review_data()\n",
     "    2. gen_review_app()\n",
     "    3. gen_autofill()\n",
-    "    \n",
     "    \n",
     "Your file will look something like the following:\n"
    ]
@@ -156,7 +153,7 @@
    "id": "7dc32aa5-6c24-4940-8396-88c23a66d50c",
    "metadata": {},
    "source": [
-    "To crete a `ReviewData` object, the following parameters must be defined:\n",
+    "To crete a `ReviewData` object, the following parameters must be defined, either by the developer or the user, or both:\n",
     "- `review_data_fn`: A file path to save the object as a pkl file.\n",
     "- `description`: A string describing the ReviewData object's source of data and purpose\n",
     "- `df`: pandas dataframe containing the data to review. Each row corresponds to a single item to be annotated.\n",
@@ -215,7 +212,6 @@
    "cell_type": "markdown",
    "id": "add9e025-c145-404d-8832-0ba6c75cc95c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -243,7 +239,7 @@
     "1. Layout: how you want the app to look\n",
     "2. Callbacks: functions to define interactivity with the components in your layout\n",
     "\n",
-    "The `ReviewDataApp` is built so it is simple for you to easily add components and interactivity without having to deal directly with some of the idiosyncrasies of the package. \n"
+    "The `ReviewDataApp` is built so it is simple for you to easily add components and interactivity without having to deal directly with some of the idiosyncrasies of the plotly dash package. \n"
    ]
   },
   {
@@ -255,11 +251,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93788d93-702e-43ff-8a8a-9dd2f0fba253",
+   "cell_type": "raw",
+   "id": "489ed9e2-17de-4e28-bc78-74f7d520c1e7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "app = ReviewDataApp()\n",
     "app.add_component(AppComponent(...), ...)\n",
@@ -286,7 +280,9 @@
     "Sometimes your callback functions need parameters that may be specific to your reviewer type, or defined by the user (ex. pointing to a specific column name in the ReviewDataObject, specific parameters for displaying graphs, etc.). When adding a component to the app, you can also specify these arguments with keywords arguments.\n",
     "\n",
     "```\n",
-    "premade_component = AppComponent(..., new_data_callback=lambda df, idx, y: df.loc[idx] + y, ...)\n",
+    "premade_component = AppComponent(..., \n",
+    "                                 new_data_callback=lambda df, idx, y: df.loc[idx] + y, \n",
+    "                                 ...)\n",
     "\n",
     "class PrebuiltReviewer(ReviewerTemplate):\n",
     "    ...\n",
@@ -295,20 +291,20 @@
     "    def gen_review_app(self):\n",
     "        app = ReviewDataApp()\n",
     "        app.add_component(premade_component,\n",
-    "                          y=10) \n",
+    "                          y=10) # <-------------------\n",
     "        return app\n",
     "        \n",
     "    # OR define by the user\n",
     "    def gen_review_app(self, y):\n",
     "        app = ReviewDataApp()\n",
     "        app.add_component(premade_component,\n",
-    "                          y=y) \n",
+    "                          y=y)  # <-------------------\n",
     "        return app\n",
     "```\n",
     "\n",
     "**Premade components**\n",
     "\n",
-    "`ReviewDataApp` objects also includes a function `add_table_from_path()` to create a simple table reading a file from a column.\n"
+    "`ReviewDataApp` objects also includes a function `add_table_from_path()` to create a simple table reading a file from a column. You can use it just like `add_component()`, but you only need to specify which column in the ReviewData object to get the file from, and which columns in the file's table to display.\n"
    ]
   },
   {
@@ -324,53 +320,6 @@
     "                                component_name='maf-component-id', \n",
     "                                table_fn_col='DFCI_bucket_sample_dfci_maf_fn', \n",
     "                                table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
-    "\n",
-    "\n",
-    "        def gen_data_summary_table(df, idx, cols):\n",
-    "            r = df.loc[idx]\n",
-    "            return [[html.H1(f'{r.name} Data Summary'), dbc.Table.from_dataframe(r[cols].to_frame().reset_index())]]\n",
-    "\n",
-    "        app.add_component(AppComponent(name='sample-info-component', \n",
-    "                                       layout=html.Div(children=[html.H1('Data Summary'), \n",
-    "                                                       dbc.Table.from_dataframe(df=pd.DataFrame())],\n",
-    "                                                       id='sample-info-component'\n",
-    "                                                      ), \n",
-    "                                       callback_output=[Output('sample-info-component', 'children')],\n",
-    "                                       new_data_callback=gen_data_summary_table),\n",
-    "                               cols=['BETA_ploidy',\n",
-    "                                     'BETA_purity',\n",
-    "                                     'BETA_purity_lower',\n",
-    "                                     'BETA_purity_upper']\n",
-    "                              )\n",
-    "\n",
-    "        def plot_interactive_graph(df: pd.DataFrame, idx: str, slider_value, test_param):\n",
-    "            x = np.arange(0, 1, 0.1)\n",
-    "            fig = go.Figure()\n",
-    "            fig.add_trace(go.Scatter(x=x, y=x))\n",
-    "            print(f'plot_interactive_graph: {test_param}')\n",
-    "            return [fig, 0.5]\n",
-    "\n",
-    "        def interactive_graph_change_lines(df: pd.DataFrame, idx:str, slider_value, test_param):\n",
-    "            fig = plot_interactive_graph(df, idx, slider_value, test_param)[0] # cache?\n",
-    "            fig.add_vline(slider_value)\n",
-    "            print(f'interactive_graph_change_lines: {test_param}')\n",
-    "            return [fig, dash.no_update] # or just return the original file\n",
-    "\n",
-    "\n",
-    "        app.add_component(AppComponent('test-interactive-graph',\n",
-    "                                      html.Div(children=[dcc.Graph(figure={}, id='a-figure'), \n",
-    "                                                dcc.Slider(0, 1, 0.1, value=0.5, \n",
-    "                                                           id='a-slider'\n",
-    "                                                          )\n",
-    "                                               ]),\n",
-    "                                      new_data_callback=plot_interactive_graph,\n",
-    "                                      internal_callback=interactive_graph_change_lines,\n",
-    "                                      callback_output=[Output('a-figure', 'figure'), Output('a-slider', 'value')],\n",
-    "                                      callback_input=[Input('a-slider', 'value')],\n",
-    "                                      callback_states_for_autofill=[State('a-slider', 'value')] # see Autofill\n",
-    "                                   ),\n",
-    "                       test_param=test_param\n",
-    "                       )\n",
     "        \n",
     "        return app\n",
     "    "
@@ -380,7 +329,6 @@
    "cell_type": "markdown",
    "id": "3ea81b40-7307-483c-b98b-75116d8ffee2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -392,18 +340,20 @@
    "id": "b6a7fda4-ec2a-4256-a6fa-44482469efee",
    "metadata": {},
    "source": [
-    "Sometimes you may have a lot of annotations, or one of your components produces an value that you want to use as an annotation. It can be annoying sometimes to have to manually type things, so the `ReviewDataApp` has functionality to handle linking the current state of your subcomponents in the app to the annotation input panel.\n",
+    "Sometimes you may have a lot of annotations, or one of your components produces an value that you want to use as an annotation. It can be annoying sometimes to have to manually type things into the form, so the `ReviewDataApp` has functionality to handle linking the current state of your subcomponents in the app to the annotation input panel.\n",
     "\n",
-    "You can add these \"links\" with `self.add_autofill()`:\n",
-    "- component_name: the name of the component to read from.\n",
-    "- autofill_dict: a dictionary linking the annotation column name in the reviewdata object (key) to the State of something in the layout of the app, or a constant value.\n",
+    "You can set these \"links\" with `self.add_autofill()`:\n",
+    "- `component_name`: the name of the component to read from.\n",
+    "- `autofill_dict`: a dictionary linking the annotation column name in the reviewdata object (key) to the State of something in the layout of the app, or a constant value.\n",
     "\n",
-    "Prereqs: Only States specified when creating components with `AppComponent()` with parameter `callback_states_for_autofill` can be used for autofilling\n"
+    "Prereqs: Only States specified when creating components with `AppComponent()` with parameter `callback_states_for_autofill` can be used for autofilling\n",
+    "\n",
+    "Note that the user can add additional annotation if they like with `reviewer.add_autofill()` as well if they decide to add additional components or annotations to the existing reviewer.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f8057a84-be10-4f3c-8ad4-83b66826cc8b",
    "metadata": {},
    "outputs": [],
@@ -588,7 +538,7 @@
     "\n",
     "# User customization\n",
     "test_reviewer.app.add_component(AppComponent('test-add-component', html.Div(html.H1('New component'))))\n",
-    "test_reviewer.review_data.add_annotation(ReviewDataAnnotation('another_annotation', 'number'))\n",
+    "test_reviewer.review_data.add_annotation({'another_annotation': ReviewDataAnnotation('number')\")\n",
     "\n",
     "# Run\n",
     "test_reviewer.run()"
@@ -607,47 +557,6 @@
     "another_reviewer.app = test_reviewer.app # do not need to re-add customizations\n",
     "another_reviewer.autofill_dict = test_reviewer.autofill_dict\n",
     "test_reviewer.run()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3635526c",
-   "metadata": {},
-   "source": [
-    "# Reviewing Data \n",
-    "\n",
-    "1. Enforce consistent and meaningful annotation\n",
-    "1. Consolidate multiple sources of data in a single place\n",
-    "1. Make review dashboard flexible for different needs\n",
-    "\n",
-    "The only constrains are:\n",
-    "1. Each row corresponds to specific data item you want to annotated. It is independent of the other rows in the table\n",
-    "1. History can not be \"undone\"\n",
-    "\n",
-    "Below is an example of a table where each row corresponds to a sample. In each column is all the data that I plan to use or look at to annotat. \n",
-    "- existing annotations (such as clinical data)\n",
-    "- paths to files I can plot as a graph or display as a table\n",
-    "\n",
-    "Recommendations:\n",
-    "- Do as much automation for annotations as possible first. You can use this tool to manually check and update these annotations\n",
-    "- Preprocess your files so when each sample's data is rendered, it will take less time to switch between samples."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e128e09",
-   "metadata": {},
-   "source": [
-    "## Setting up your review session\n",
-    "\n",
-    "`ReviewData` is an object meant to mirror how one may go about annotations by going row by row in a spreadsheet, and filling in/editing the corresponding columns. Instantiate your `ReviewData` session by specifying:\n",
-    "1. A directory to store the meta data related to your review session\n",
-    "1. A pandas dataframe with all the information you need for each data point. The data point id's must be the index\n",
-    "1. Specify what you want to annotate and set validation (in progress)\n",
-    "\n",
-    "If the ReviewData Session directory already exists and as the expected files, it will simply reload those existing files. Some caveats:\n",
-    "1. If you add items to `annotation_data`, it will add the column to the annot table. However, deleting one from the list will not remove it from the table. However, later you will see you cannot update that column in the app\n",
-    "1. any changes to df between re-runs will NOT change any of the values or paths in the data table. You will have to manually update the path/data.tsv file if this is what you want to do. Depending on why you may want to update your input data, generally I recommend making a new session. (there is an option to \"autofill\" annotations, so you do not necessarily have to completely redo everything)"
    ]
   },
   {
