add manual purity slider to matched purity reviewer

--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "83de658a",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "cded4f95",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "f7f05aa1",
    "metadata": {
     "scrolled": true
@@ -458,12 +458,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.pkl...\n"
+      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/rdata_to_tsv\n",
+      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/cnp_figs\n",
+      "Reloading cnp figs\n",
+      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/mut_figs\n",
+      "Reloading mut figs\n"
      ]
     }
    ],
    "source": [
-    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.pkl'\n",
+    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data_4.pkl'\n",
     "\n",
     "matched_reviewer = MatchedPurityReviewer()\n",
     "matched_reviewer.set_review_data(review_data_fn = review_data_fn, \n",
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "eafeef33-cada-4564-9542-8d6082ecb793",
    "metadata": {},
    "outputs": [],
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "eb1fdbbe-0859-4b9c-90b3-6fc8fbb8f942",
    "metadata": {},
    "outputs": [
@@ -862,7 +866,7 @@
        "[5 rows x 146 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
@@ -942,253 +946,11 @@
    "source": [
     "matched_reviewer.review_data.history"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4784137",
-   "metadata": {},
-   "source": [
-    "# Customize App"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8a98bf06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "from jupyter_dash import JupyterDash\n",
-    "from dash import dcc\n",
-    "from dash import html\n",
-    "from dash.dependencies import Input, Output, State\n",
-    "from dash.exceptions import PreventUpdate\n",
-    "from dash import Dash, dash_table\n",
-    "import dash\n",
-    "import dash_bootstrap_components as dbc\n",
-    "import functools\n",
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7bc1b609",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add a custom component: below, I add a component that allows you to manually set the 0 and 1 line combs (cgaitools)\n",
-    "# NOTE: the purity calculated is tau, NOT tau_g. \n",
-    "# Use the called purity and tau as inputs to absolute_segforcecall to get tau_g (tau_hat)\n",
-    "def gen_custom_absolute_component(data_df, \n",
-    "                                  data_id, \n",
-    "                                  slider_value, # dash app parameters come first\n",
-    "                                  cnp_fig_pkl_fn_col,\n",
-    "                                  ):\n",
-    "    r = data_df.loc[data_id]\n",
-    "    cnp_fig = pickle.load(open(r[cnp_fig_pkl_fn_col], \"rb\"))\n",
-    "\n",
-    "    # add 1 and 0 lines\n",
-    "    cnp_fig_with_lines = go.Figure(cnp_fig)\n",
-    "    i = 0\n",
-    "    line_0 = slider_value[0]\n",
-    "    line_1 = slider_value[1]\n",
-    "    line_height = line_0\n",
-    "    step_size = line_1 - line_0\n",
-    "    while line_height < 2:\n",
-    "        line_height = line_0 + (step_size * i)\n",
-    "        cnp_fig_with_lines.add_hline(y=line_height, \n",
-    "                                     line_dash=\"dash\", \n",
-    "                                     line_color='black',\n",
-    "                                     line_width=1\n",
-    "                                    )\n",
-    "        i += 1\n",
-    "        \n",
-    "    purity = 1 - (float(line_0) / float(line_1))\n",
-    "    ploidy = (2 * (1 - line_0) * (1 - purity)) / (purity * line_0) # tau, not tau_g\n",
-    "    return [slider_value,\n",
-    "            cnp_fig_with_lines, \n",
-    "            purity,\n",
-    "            ploidy]\n",
-    "\n",
-    "\n",
-    "# Adding another component to prebuilt dash board\n",
-    "matched_reviewer.app.add_component(AppComponent('custom-cnp-plot',\n",
-    "                                     html.Div([html.H2('Custom Copy Number Profile', id='custom-header-cnp-id'),\n",
-    "                                                   dbc.Row([\n",
-    "                                                               dbc.Col([dcc.Graph(id='custom-cnp-graph', \n",
-    "                                                                                  figure={})\n",
-    "                                                                       ], \n",
-    "                                                                       md=10),\n",
-    "                                                               dbc.Col([\n",
-    "                                                                        dbc.Row(html.Div([html.Div([html.P('Purity: ', \n",
-    "                                                                                                          style={'display': 'inline'}), \n",
-    "                                                                                                   html.P(0, \n",
-    "                                                                                                          id='custom-cnp-graph-purity', \n",
-    "                                                                                                          style={'display': 'inline'})]), \n",
-    "                                                                                         html.Div([html.P('Ploidy: ', \n",
-    "                                                                                                          style={'display': 'inline'}), \n",
-    "                                                                                                   html.P(0, \n",
-    "                                                                                                          id='custom-cnp-graph-ploidy', \n",
-    "                                                                                                          style={'display': 'inline'})]), \n",
-    "                                                                                         ])),\n",
-    "                                                                        dbc.Row(dcc.RangeSlider(id='custom-cnp-slider', min=0.0, max=2.0, step=0.01, \n",
-    "                                                                                               allowCross=False, \n",
-    "                                                                                               value=[0.5, 1.0], \n",
-    "                                                                                               marks={i: f'{i}' for i in range(0, 3, 1)}, \n",
-    "                                                                                               vertical=True,\n",
-    "                                                                                               tooltip={\"placement\": \"right\", \n",
-    "                                                                                                        \"always_visible\": True})),\n",
-    "                                                                            ], \n",
-    "                                                                       md=1), \n",
-    "                                                   ]),\n",
-    "                                     ]),\n",
-    "                                     new_data_callback=gen_custom_absolute_component,\n",
-    "                                     internal_callback=gen_custom_absolute_component,\n",
-    "                                     callback_input=[Input('custom-cnp-slider', 'value')],\n",
-    "                                     callback_output=[Output('custom-cnp-slider', 'value'),\n",
-    "                                                      Output('custom-cnp-graph', 'figure'), \n",
-    "                                                      Output('custom-cnp-graph-purity', 'children'),\n",
-    "                                                      Output('custom-cnp-graph-ploidy', 'children')\n",
-    "                                                     ]),\n",
-    "                         cnp_fig_pkl_fn_col='cnp_figs_pkl'\n",
-    "                        )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "84484eb3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://0.0.0.0:8051/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe6b14f4700>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# run inside the notebook with mode='inline'\n",
-    "matched_reviewer.run(mode='inline', port=8051)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a0a80b05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>purity</th>\n",
-       "      <th>ploidy</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>value</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>0.920479</td>\n",
-       "      <td>1.99645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               purity   ploidy\n",
-       "value                                                         \n",
-       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair  0.920479  1.99645\n",
-       "RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair       NaN      NaN\n",
-       "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair       NaN      NaN\n",
-       "RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair       NaN      NaN\n",
-       "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair        NaN      NaN"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matched_reviewer.review_data.annot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62c2ee27-c794-41ec-8825-6168dd4753b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1202,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
