manual purity reviewer

--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -946,6 +946,86 @@
    "source": [
     "matched_reviewer.review_data.history"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad38e70c-9267-4bc2-9489-80ce212438d0",
+   "metadata": {},
+   "source": [
+    "# Only manual purity review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6770c38c-a251-48cf-a4a3-6b89e6edcae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from JupyterReviewer.Reviewers.ManualPurityReviewer import ManualPurityReviewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "ef51b1f6-cc17-4f1d-9fbc-2c706878f4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_manual/cnp_figs\n",
+      "Reloading cnp figs\n",
+      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_manual/mut_figs\n",
+      "Reloading mut figs\n"
+     ]
+    }
+   ],
+   "source": [
+    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/manual_review_session.pkl'\n",
+    "\n",
+    "manual_reviewer = ManualPurityReviewer()\n",
+    "manual_reviewer.set_review_data(review_data_fn = review_data_fn, \n",
+    "                                 description='testing matched purity reviewer', \n",
+    "                                 df = pcyc_wm_pairs_df, # optional if directory above already exists. \n",
+    "                                 preprocess_data_dir= '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_manual',\n",
+    "                                 acs_col='alleliccapseg_tsv', \n",
+    "                                 maf_col='mutation_validator_validated_maf',\n",
+    "                                 rdata_fn_col='absolute_rdata',\n",
+    "                                 reload_cnp_figs=True,\n",
+    "                                 reload_mut_figs=True,\n",
+    "                                )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5056dd2f-1b79-4c01-822e-f3a0e8d5a3fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://0.0.0.0:8051/\n"
+     ]
+    }
+   ],
+   "source": [
+    "manual_reviewer.set_review_app(sample_info_cols=['absolute_highres_plot', 'alleliccapseg_plot'],\n",
+    "                                acs_col='alleliccapseg_tsv', \n",
+    "                                maf_col='mutation_validator_validated_maf')\n",
+    "manual_reviewer.run(port=8051)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aa4d36c-a154-4e6a-b8d6-5d21aed638a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
